# ElaboratoTimer_

./: .gitignore  CMakeLists.txt  Data.cpp  Data.h  Display.cpp  Display.h  Observer.h  Ora.cpp  Ora.h  Subject.h  ThreadClass.cpp  ThreadClass.h  Timer.cpp  Timer.h  TimerObserver.cpp  TimerObserver.h  main.cpp
Tests/: CMakeLists.txt  DataTest.cpp  OraTest.cpp
